# jni.hpp

./: .gitignore  CMakeLists.txt
include/jni/: class.hpp  functions.hpp  native_method.hpp  object.hpp  string.hpp  wrapping.hpp
test/: high_level.cpp  jni.h  low_level.cpp
